doc: url.md in 2022su

--- a/docs/培训/2022夏/嵌软算法组/课程实用链接.md
+++ b/docs/培训/2022夏/嵌软算法组/课程实用链接.md
@@ -3,4 +3,52 @@ title: 课程实用链接
 ---
 # 课程实用链接
 
-## 邮件列表摘录
+阅读每个页面前，请注意页面的更新日期。各页面的更新日期基于 Git 的修改时间。
+
+## Tutorial 教程
+
+几句话说明应该怎么看教程。
+
+* 菜鸟教程
+
+  <https://www.runoob.com/>
+
+  检验下代码基本功：<https://vjudge.net/problem#source=USACO1.>、<https://vjudge.net/problem#source=USACO2.>...
+
+* The Missing Semester of Your CS Education
+
+  <https://missing-semester-cn.github.io/>
+
+  此为翻译版本。`1/13/20: Course overview + the shell`，`1/21/20: Command-line Environment`和`1/27/20: Metaprogramming`三节课尤其值得反复消化。将在框架入门时扩充讲解相关知识。
+
+  相关视频：[DynamicX培训课 | 软件开发通用课程--先导课](https://b23.tv/BV1oQ4y1i7zA)
+
+* RoboMaster开发板C型嵌入式软件教程文档
+  
+  <https://github.com/RoboMaster/Development-Board-C-Examples>
+
+  本文档讲解了使用 HAL 库与 CubeMX 结合开发，调用 C 型开发版各类外设的实现代码，和各外设的对应功能。
+
+  相关视频：直接搜索 B 站。
+
+* Real Time pose estimation of a textured object (OpenCV Tutorials)
+
+  <https://docs.opencv.org/4.x/dc/d2c/tutorial_real_time_pose.html>
+
+## Manual 手册和白皮书
+
+几句话说明应该怎么看手册和白皮书。
+
+* ST 芯片相关手册
+
+  [AN4488 Getting started with STM32F4xxxx MCU hardware development](https://www.st.com/resource/zh/application_note/an4488-getting-started-with-stm32f4xxxx-mcu-hardware-development-stmicroelectronics.pdf)
+
+  [UM1725 Description of STM32F4 HAL and low-layer drivers](https://www.st.com/resource/en/user_manual/um1725-description-of-stm32f4-hal-and-lowlayer-drivers-stmicroelectronics.pdf)
+
+* ROS 2 Design & Concept
+
+  <https://docs.ros.org/en/humble/Concepts.html> <https://design.ros2.org>
+
+* Robomaster 2022 机甲大师高校系列赛机器人制作规范手册
+
+## Mail List 邮件列表摘录
