--- a/docs/培训/2022夏/嵌软算法组/课程实用链接.md
+++ b/docs/培训/2022夏/嵌软算法组/课程实用链接.md
@@ -5,17 +5,27 @@ title: 课程实用链接
 
 阅读每个页面前，请注意页面的更新日期。各页面的更新日期基于 Git 的修改时间。
 
+`A`代指
+
 ## Tutorial 教程
 
-几句话说明应该怎么看教程。
+<!--几句话说明应该怎么看教程。只要找到了诀窍-->
 
-* 菜鸟教程
+* 菜鸟教程 (A.1)
 
   <https://www.runoob.com/>
 
   检验下代码基本功：<https://vjudge.net/problem#source=USACO1.>、<https://vjudge.net/problem#source=USACO2.>...
 
-* The Missing Semester of Your CS Education
+* 酒井科协暑培 (B.1)
+
+  <https://zhaochen20.notion.site/3-0-c982f886914245cc8f33337e24b1c7e5>
+
+  酒井科协是清华大学计算机系学生科协。其社交媒体为微信公众号。
+
+  1. (B.1.1) [Linux 入门](https://docs.net9.org/basic/linux/)
+
+* The Missing Semester of Your CS Education (B.2)
 
   <https://missing-semester-cn.github.io/>
 
@@ -23,7 +33,7 @@ title: 课程实用链接
 
   相关视频：[DynamicX培训课 | 软件开发通用课程--先导课](https://b23.tv/BV1oQ4y1i7zA)
 
-* RoboMaster开发板C型嵌入式软件教程文档
+* RoboMaster开发板C型嵌入式软件教程文档 (C.1)
   
   <https://github.com/RoboMaster/Development-Board-C-Examples>
 
@@ -31,7 +41,7 @@ title: 课程实用链接
 
   相关视频：直接搜索 B 站。
 
-* Real Time pose estimation of a textured object (OpenCV Tutorials)
+* Real Time pose estimation of a textured object (OpenCV Tutorials) (D.1)
 
   <https://docs.opencv.org/4.x/dc/d2c/tutorial_real_time_pose.html>
 
@@ -39,16 +49,16 @@ title: 课程实用链接
 
 几句话说明应该怎么看手册和白皮书。
 
-* ST 芯片相关手册
+* ST 芯片相关手册 (CM.1)
 
   [AN4488 Getting started with STM32F4xxxx MCU hardware development](https://www.st.com/resource/zh/application_note/an4488-getting-started-with-stm32f4xxxx-mcu-hardware-development-stmicroelectronics.pdf)
 
   [UM1725 Description of STM32F4 HAL and low-layer drivers](https://www.st.com/resource/en/user_manual/um1725-description-of-stm32f4-hal-and-lowlayer-drivers-stmicroelectronics.pdf)
 
-* ROS 2 Design & Concept
+* ROS 2 Design & Concept (BM.1)
 
   <https://docs.ros.org/en/humble/Concepts.html> <https://design.ros2.org>
 
-* Robomaster 2022 机甲大师高校系列赛机器人制作规范手册
+* Robomaster 2022 机甲大师高校系列赛机器人制作规范手册 (AM.1)
 
 ## Mail List 邮件列表摘录
