chore: add path, image for class3, link for mech. edit preface for soft

--- a/docs/培训/2022夏/嵌软算法组/环境安装.md
+++ b/docs/培训/2022夏/嵌软算法组/环境安装.md
@@ -3,6 +3,8 @@ title: 环境安装
 ---
 # 环境安装
 
+在课程规划里已明确每节课需要用到的开发环境。
+
 ## 开发环境 1
 
 本开发环境的安装分为多个步骤。根据网络环境，安装耗时约为 10 - 30 分钟。
@@ -15,7 +17,7 @@ title: 环境安装
 
    系统盘空间不够，代理服务的使用，Windows 10 上代替 WSLg ，可参考 <https://dowww.spencerwoo.com/> 解决。但需注意该文档目前未活跃更新，如：<https://github.com/spencerwooo/dowww/issues/103>。
 
-   _提示：_
+   _提示：你可以参考课程规划中的提示，使用已有的开发环境或替代方案。_
 
 2. 目标： VS Code + platformIO
 
@@ -43,6 +45,8 @@ title: 环境安装
 ## 开发环境 3
 
 _目标：_ ROS 2 humble / galactic
+
+**如果你还没有上第一节课，而且没有阅读 B.1.1 与 B.2，请你一定要先阅读它们和相关的课程实用链接。**
 
 这是中科大镜像源关于 ROS 的安装帮助：<https://mirrors.ustc.edu.cn/help/ros.html>。
 
@@ -82,14 +86,12 @@ deb       [ arch=amd64 ] https://mirrors.cqu.edu.cn/ubuntu/ jammy-security main 
 
 1. The source list /etc/apt/sources.list and the files contained in /etc/apt/sources.list.d/ are designed to support any number of active sources and a variety of source media.
 
-(https://manpages.debian.org/bullseye/apt/sources.list.5.en.html#THE_DEB_AND_DEB-SRC_TYPES:_OPTIONS)
+(https://manpages.debian.org/stable/apt/sources.list.5.en.html#THE_DEB_AND_DEB-SRC_TYPES:_OPTIONS)
 
 2. Architectures (arch) is a multivalue option defining for which architectures information should be downloaded. If this option isn't set the default is all architectures as defined by the APT::Architectures config option.
 
 3. Signed-By (signed-by) is an option to require a repository to pass apt-secure(8) verification with a certain set of keys rather than all trusted keys apt has configured. It is specified as a list of absolute paths to keyring files (have to be accessible and readable for the _apt system user, so ensure everyone has read-permissions on the file) and fingerprints of keys to select from these keyrings. If no keyring files are specified the default is the trusted.gpg keyring and all keyrings in the trusted.gpg.d/ directory (see apt-key fingerprint). (...略)
 ```
-
-**如果你还没有上第一节课，而且没有阅读 B.1.1 与 B.2，请你一定要先阅读它们和相关的课程实用链接。**
 
 ### 参考
 
