--- a/docs/培训/2022夏/嵌软算法组/课程规划.md
+++ b/docs/培训/2022夏/嵌软算法组/课程规划.md
@@ -39,6 +39,8 @@ title: 课程规划
 
    邮件列表是 [#](mailto:#) 。
 
+   [什么是邮件列表？](../../../实用链接/邮件列表)
+
 **课程鼓励：遇到问题，敢于发问，勤于思考。** 
 
 1. 请首先使用恰当的搜索引擎，搜寻相关关键词，细化问题，去伪求真。
@@ -57,9 +59,7 @@ title: 课程规划
 
     需在课前掌握流程结构（顺序、分支、循环）、常见数据类型、函数及递归、面向对象的基本概念。最好能熟悉某种编程语言的使用，注意或了解到相应现代标准，如 Python [typing](https://docs.python.org/zh-cn/3/library/typing.html)  ， ECMAScript 6+， C11 / C++14 （如智能指针）。
 
-    时间待定。
-
-    任务时间待定。
+    已于 2022/07/18 上课。
 
 2. 硬件入门
 
