--- a/docs/培训/2022夏/机械组/自主学习资料.md
+++ b/docs/培训/2022夏/机械组/自主学习资料.md
@@ -3,15 +3,28 @@ title: 自主学习资料
 ---
 # 自主学习资料
 
+## 认识画图要用到的零件
+
+* [动力装置详解](https://www.bilibili.com/video/av986208191)
+
 ## Autodesk Fusion 360 建模入门
+
+基础功能演示：
 
 * [<del>Fusion360 引入</del>](https://www.bilibili.com/video/av257617605)
 * [Fusion360 注册下载](https://www.bilibili.com/video/av470007652)
+  请在培训群内获取加入相应组织的方式。
 * [帮助、草图、拉伸](https://www.bilibili.com/video/av982664256)
 * [导入、导出、旋转、联接](https://www.bilibili.com/video/av770264777)
 * [快捷键设置、运动连接、槽](https://www.bilibili.com/video/av597924633)
 * [进度回溯](https://www.bilibili.com/video/av813170669)
+* [截面图分析](https://www.bilibili.com/video/av687019185)
 * [阵列、材料、外观：以简单齿轮为例](https://www.bilibili.com/video/av513649963)
+* [使用自带脚本：以直齿轮为例](https://www.bilibili.com/video/av471542738)
 * [CNC加工注意、缩放：以简单联轴器为例](https://www.bilibili.com/video/av428800736)
+* [投影、加强筋：以凸台连接结构为例](https://www.bilibili.com/video/av389595149)
+
+沉浸式绘图：
 
 * [5-8连轴器](https://www.bilibili.com/video/av471329089)
+* [飞镖零件爆炸图](https://www.bilibili.com/video/av514226469)
