class: add lab1

--- a/docs/培训/2022夏/嵌软算法组/环境安装.md
+++ b/docs/培训/2022夏/嵌软算法组/环境安装.md
@@ -110,3 +110,5 @@ deb       [ arch=amd64 ] https://mirrors.cqu.edu.cn/ubuntu/ jammy-security main 
 ## 开发环境 6
 
 目标： OpenCV 或任意含图像处理的深度学习框架
+
+_请参见[实操第一节课](./实操/实操第一节课)_
