--- a/docs/培训/2022夏/嵌软算法组/课程实用链接.md
+++ b/docs/培训/2022夏/嵌软算法组/课程实用链接.md
@@ -5,7 +5,16 @@ title: 课程实用链接
 
 阅读每个页面前，请注意页面的更新日期。各页面的更新日期基于 Git 的修改时间。
 
-`A`代指
+* `A`代指构建基础知识框架的内容。
+* `B`代指构建进阶知识框架的内容。
+* `C`代指和比赛直接相关的技术栈内容。
+* `D`代指和比赛技术栈有联系的各类资料。
+
+## Task Tracker 任务提交平台
+
+* 如果你没有 C/Python 语言基础，可以前往洛谷团队查看相应的推荐题单和任务。(A.3)
+
+  <https://www.luogu.com.cn/team/51559>
 
 ## Tutorial 教程
 
@@ -16,6 +25,14 @@ title: 课程实用链接
   <https://www.runoob.com/>
 
   检验下代码基本功：<https://vjudge.net/problem#source=USACO1.>、<https://vjudge.net/problem#source=USACO2.>...
+
+* The Cherno's Welcome to C++ 字幕版 (A.2)
+
+  <https://b23.tv/av68697716>
+
+  Visual Studio **不是必须** 的。你可以使用 Code::Blocks （请[下载包含编译器的版本](https://www.codeblocks.org/downloads/binaries/)，文件名形如`codeblocks-20.03mingw-setup.exe`或`codeblocks-20.03mingw-nosetup.zip`）、Embarcadero Dev-C++ （请[下载包含编译器的版本](https://github.com/Embarcadero/Dev-Cpp/releases)，文件名形如`Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Setup.exe`或`Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Portable.7z`）等软件快速上手。
+
+  建议你可以根据 _环境安装 - 开发环境 1_ 的前两个步骤，使用 platformIO 配置的编译器和目录框架 **快速上手** 。你还可以根据 _开发环境 6_ 的指引，为 VSCode 配置简单的任务文件，或集成 CMake 插件完成 **引用库文件** 的编译。
 
 * 酒井科协暑培 (B.1)
 
