misc: move urls.md, edit urls.md.

--- a/docs/培训/2022夏/嵌软算法组/课程规划.md
+++ b/docs/培训/2022夏/嵌软算法组/课程规划.md
@@ -13,7 +13,7 @@ title: 课程规划
 
 ### 课程准备
 
-课前请务必点击[课程实用链接](./课程实用链接)，阅读相关内容并下载资料。
+课前请务必点击[课程实用链接](/外部资料/课程实用链接)，阅读相关内容并下载资料。
 
 **本课程建议使用 GNU/Linux 工具链，并配合 Visual Studio Code 进行工程开发实践。** 利用 Windows Subsystem for Linux 2 平台，安装相关工具链、编辑器和插件的具体步骤，请见[环境安装](./环境安装)。以下实现方式可作为替代方案：
 
@@ -39,7 +39,7 @@ title: 课程规划
 
    邮件列表是 [#](mailto:#) 。
 
-   [什么是邮件列表？](../../../实用链接/邮件列表)
+   [什么是邮件列表？](/名词解释/邮件列表)
 
 **课程鼓励：遇到问题，敢于发问，勤于思考。** 
 
