--- a/docs/外部资料/课程实用链接.md
+++ b/docs/外部资料/课程实用链接.md
@@ -16,6 +16,22 @@ title: 课程实用链接
 
   <https://www.luogu.com.cn/team/51559>
 
+  :::{admonition} 2022年题单
+  **[题单页面](https://www.luogu.com.cn/training/251065#problems)**
+
+  语言基础类（解题思路可以看题解）
+  [P1003](https://www.luogu.com.cn/problem/P1003)
+  [P1015](https://www.luogu.com.cn/problem/P1015)
+  [P1044](https://www.luogu.com.cn/problem/P1044)
+  [P1047](https://www.luogu.com.cn/problem/P1047)
+  [P1059](https://www.luogu.com.cn/problem/P1059)
+  [P1085](https://www.luogu.com.cn/problem/P1085)
+  [P1089](https://www.luogu.com.cn/problem/P1089)
+  [P1143](https://www.luogu.com.cn/problem/P1143)
+  [P1208](https://www.luogu.com.cn/problem/P1208)
+  [P1226](https://www.luogu.com.cn/problem/P1226)
+  :::
+
 ## Tutorial 教程
 
 <!--几句话说明应该怎么看教程。只要找到了诀窍-->
