chore: clean index.rst, rename resources.

--- a/docs/培训/2022夏/嵌软算法组/环境安装.md
+++ b/docs/培训/2022夏/嵌软算法组/环境安装.md
@@ -10,7 +10,7 @@ title: 环境安装
 本开发环境的安装分为多个步骤。根据网络环境，安装耗时约为 10 - 30 分钟。
 
 1. 目标： WSL 2 + Ubuntu 22.04 / 20.04
-   
+
    参照 <https://docs.microsoft.com/zh-cn/windows/wsl/install-manual> 完成 WSL 及 Ubuntu 发行版的安装。 **请先阅读第一句话，能自动安装时请选择自动安装。典型的自动安装过程如下图。**
 
    如果你以前已经安装了 WSL 及其发行版，请使用 [`wsl --set-version`](https://docs.microsoft.com/zh-cn/windows/wsl/basic-commands#set-wsl-version-to-1-or-2) 确保你使用了 WSL 2 。
@@ -24,7 +24,7 @@ title: 环境安装
    按照步骤 1 安装好 WSL 后，在 <https://code.visualstudio.com/download> 处下载适用于 Windows 的 VS Code。若选择其他方案，请选择下载适用于 Linux 的 VS Code 。
 
    [分清楚区别。](https://docs.microsoft.com/en-us/windows/wsl/tutorials/wsl-vscode)
-   
+
    _提示：你是否知道中英文文档如何切换？_
 
    稍微能借鉴的：<https://zhuanlan.zhihu.com/p/61589772>
@@ -111,4 +111,4 @@ deb       [ arch=amd64 ] https://mirrors.cqu.edu.cn/ubuntu/ jammy-security main 
 
 目标： OpenCV 或任意含图像处理的深度学习框架
 
-_请参见[实操第一节课](./实操/实操第一节课)_
+_请参见[实操第一节课](./存档 - 实操课/实操第一节课)_
