feat: use sphinx_design, change urls / keil / setup

--- a/docs/外部资料/课程实用链接.md
+++ b/docs/外部资料/课程实用链接.md
@@ -5,14 +5,14 @@ title: 课程实用链接
 
 阅读每个页面前，请注意页面的更新日期。各页面的更新日期基于 Git 的修改时间。
 
-* `A`代指构建基础知识框架的内容。
-* `B`代指构建进阶知识框架的内容。
-* `C`代指和比赛直接相关的技术栈内容。
-* `D`代指和比赛技术栈有联系的各类资料。
+* {bdg-secondary}`A`代指构建基础知识框架的内容。
+* {bdg-primary}`B`代指构建进阶知识框架的内容。
+* {bdg-info}`C`代指和比赛直接相关的技术栈内容。
+* {bdg-success}`D`代指和比赛技术栈有联系的各类资料。
 
 ## Task Tracker 任务提交平台
 
-* 如果你没有 C/Python 语言基础，可以前往洛谷团队查看相应的推荐题单和任务。(A.3)
+* {bdg-secondary}`A.3` 如果你没有 C/Python 语言基础，可以前往洛谷团队查看相应的推荐题单和任务。
 
   <https://www.luogu.com.cn/team/51559>
 
@@ -36,29 +36,33 @@ title: 课程实用链接
 
 <!--几句话说明应该怎么看教程。只要找到了诀窍-->
 
-* 菜鸟教程 (A.1)
+* {bdg-secondary}`A.1` 菜鸟教程
 
   <https://www.runoob.com/>
 
   检验下代码基本功：<https://vjudge.net/problem#source=USACO1.>、<https://vjudge.net/problem#source=USACO2.>...
 
-* The Cherno's Welcome to C++ 字幕版 (A.2)
+* {bdg-secondary}`A.2` The Cherno's Welcome to C++ 字幕版
 
   <https://b23.tv/av68697716>
 
+  :::{note}
+  
   Visual Studio **不是必须** 的。你可以使用 Code::Blocks （请[下载包含编译器的版本](https://www.codeblocks.org/downloads/binaries/)，文件名形如`codeblocks-20.03mingw-setup.exe`或`codeblocks-20.03mingw-nosetup.zip`）、Embarcadero Dev-C++ （请[下载包含编译器的版本](https://github.com/Embarcadero/Dev-Cpp/releases)，文件名形如`Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Setup.exe`或`Embarcadero_Dev-Cpp_6.3_TDM-GCC_9.2_Portable.7z`）等软件快速上手。
 
-  建议你可以根据 _环境安装 - 开发环境 1_ 的前两个步骤，使用 platformIO 配置的编译器和目录框架 **快速上手** 。你还可以根据 _开发环境 6_ 的指引，为 VSCode 配置简单的任务文件，或集成 CMake 插件完成 **引用库文件** 的编译。
+  建议你可以根据 _环境安装 - 开发环境 1_ 的前两个步骤，使用 platformIO 配置的编译器和目录框架 **快速上手** 。你还可以根据 _开发环境 6（实操第一节课）_ 的指引，为 VSCode 配置简单的任务文件，或集成 CMake 插件完成 **引用库文件** 的编译。
+  
+  :::
 
-* 酒井科协暑培 (B.1)
+* {bdg-primary}`B.1` 酒井科协暑培
 
   <https://zhaochen20.notion.site/3-0-c982f886914245cc8f33337e24b1c7e5>
 
   酒井科协是清华大学计算机系学生科协。其社交媒体为微信公众号。
 
-  1. (B.1.1) [Linux 入门](https://docs.net9.org/basic/linux/)
+  1. {bdg-primary}`B.1.1` [Linux 入门](https://docs.net9.org/basic/linux/)
 
-* The Missing Semester of Your CS Education (B.2)
+* {bdg-primary}`B.2` The Missing Semester of Your CS Education
 
   <https://missing-semester-cn.github.io/>
 
@@ -66,7 +70,7 @@ title: 课程实用链接
 
   相关视频：[DynamicX培训课 | 软件开发通用课程--先导课](https://b23.tv/BV1oQ4y1i7zA)
 
-* RoboMaster开发板C型嵌入式软件教程文档 (C.1)
+* {bdg-info}`C.1` RoboMaster开发板C型嵌入式软件教程文档
   
   <https://github.com/RoboMaster/Development-Board-C-Examples>
 
@@ -74,7 +78,16 @@ title: 课程实用链接
 
   相关视频：直接搜索 B 站。
 
-* Real Time pose estimation of a textured object (OpenCV Tutorials) (D.1)
+* 通过阅读用户手册了解开发板的使用，如有必要可结合原理图、位号图确认接口位置、具体功能。
+
+  {bdg-info}`C.2.1` [RoboMaster 开发板 C 型用户手册](https://rm-static.djicdn.com/tem/35228/RoboMaster%20%20%E5%BC%80%E5%8F%91%E6%9D%BF%20C%20%E5%9E%8B%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C.pdf)
+
+  {bdg-info}`C.2.2` [RoboMaster 开发板用户手册](https://rm-static.djicdn.com/tem/RoboMaster%E5%BC%80%E5%8F%91%E7%89%88%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C.pdf)
+
+  :::{tip} Robomaster 硬件生态的文件和资料可从 !!TODO!! 上快速查看。
+  :::
+
+* {bdg-success}`D.1` Real Time pose estimation of a textured object (OpenCV Tutorials)
 
   <https://docs.opencv.org/4.x/dc/d2c/tutorial_real_time_pose.html>
 
@@ -82,16 +95,18 @@ title: 课程实用链接
 
 几句话说明应该怎么看手册和白皮书。
 
-* ST 芯片相关手册 (CM.1)
+* ST 芯片相关手册
 
-  [AN4488 Getting started with STM32F4xxxx MCU hardware development](https://www.st.com/resource/zh/application_note/an4488-getting-started-with-stm32f4xxxx-mcu-hardware-development-stmicroelectronics.pdf)
+  {bdg-info}`C.M.1` [AN4488 Getting started with STM32F4xxxx MCU hardware development](https://www.st.com/resource/zh/application_note/an4488-getting-started-with-stm32f4xxxx-mcu-hardware-development-stmicroelectronics.pdf)
 
-  [UM1725 Description of STM32F4 HAL and low-layer drivers](https://www.st.com/resource/en/user_manual/um1725-description-of-stm32f4-hal-and-lowlayer-drivers-stmicroelectronics.pdf)
+  对于软件开发，需重点关注时钟、自举过程。
 
-* ROS 2 Design & Concept (BM.1)
+  {bdg-info}`C.M.2` [UM1725 Description of STM32F4 HAL and low-layer drivers](https://www.st.com/resource/en/user_manual/um1725-description-of-stm32f4-hal-and-lowlayer-drivers-stmicroelectronics.pdf)
+
+* {bdg-primary}`B.M.1` ROS 2 Design & Concept
 
   <https://docs.ros.org/en/humble/Concepts.html> <https://design.ros2.org>
 
-* Robomaster 2022 机甲大师高校系列赛机器人制作规范手册 (AM.1)
+* {bdg-secondary}`A.M.1` Robomaster 2022 机甲大师高校系列赛机器人制作规范手册
 
 ## Mail List 邮件列表摘录
