--- a/docs/培训/2022夏/嵌软算法组/环境安装.md
+++ b/docs/培训/2022夏/嵌软算法组/环境安装.md
@@ -111,4 +111,4 @@ deb       [ arch=amd64 ] https://mirrors.cqu.edu.cn/ubuntu/ jammy-security main 
 
 目标： OpenCV 或任意含图像处理的深度学习框架
 
-_请参见[实操第一节课](./存档 - 实操课/实操第一节课)_
+_请参见[实操第一节课](./存档%20-%20实操课/实操第一节课)_
