add: add group theme, how to contribute, change urls.md

--- a/docs/外部资料/课程实用链接.md
+++ b/docs/外部资料/课程实用链接.md
@@ -2,6 +2,7 @@
 title: 课程实用链接
 ---
 
+本页面目前主要收录面向嵌软算法组方向的课程实用链接，PRs are welcomed! 
 
 阅读每个页面前，请注意页面的更新日期。各页面的更新日期基于 Git 的修改时间。
 
@@ -70,6 +71,14 @@ title: 课程实用链接
 
   相关视频：[DynamicX培训课 | 软件开发通用课程--先导课](https://b23.tv/BV1oQ4y1i7zA)
 
+* {bdg-primary}`B.3` Git
+
+  参见[标准规范](/分组专题/嵌软算法组/标准规范.md)。
+
+  相关进阶链接：<https://learngitbranching.js.org/>
+
+  相关视频：[资深工程师带你高效使用 Git 和 GitHub | 基础知识 & 实用技巧](https://b23.tv/av818393839)
+
 * {bdg-info}`C.1` RoboMaster开发板C型嵌入式软件教程文档
   
   <https://github.com/RoboMaster/Development-Board-C-Examples>
@@ -77,6 +86,8 @@ title: 课程实用链接
   本文档讲解了使用 HAL 库与 CubeMX 结合开发，调用 C 型开发版各类外设的实现代码，和各外设的对应功能。
 
   相关视频：直接搜索 B 站。
+
+  {bdg-danger}`提请注意` 该教程文档和示例代码中有一些省略的环节，或是未修订的内容，已整理于[嵌入式代码札记](/分组专题/嵌软算法组/嵌入式代码札记.md)。
 
 * 通过阅读用户手册了解开发板的使用，如有必要可结合原理图、位号图确认接口位置、具体功能。
 
@@ -107,6 +118,6 @@ title: 课程实用链接
 
   <https://docs.ros.org/en/humble/Concepts.html> <https://design.ros2.org>
 
-* {bdg-secondary}`A.M.1` Robomaster 2022 机甲大师高校系列赛机器人制作规范手册
+* {bdg-secondary}`A.M.1` Robomaster 2023 机甲大师高校系列赛机器人制作规范手册
 
 ## Mail List 邮件列表摘录
