--- a/docs/培训/2023夏/机械组/培训与回放.md
+++ b/docs/培训/2023夏/机械组/培训与回放.md
@@ -122,7 +122,7 @@ title: 培训与回放
 
 **培训作业：**
 
-请于 08 月 01 日前，在[官方论坛](https://bbs.robomaster.com/)下载，或直接通过[云端存储](https://fish.tiger3018.top/webdav/Public/Robomaster-Public/群聊和论坛资料)和 Fusion 团队内的图纸，分析不同英雄/步兵的**云台**优缺点，并体现在[作业在线文档](https://docs.qq.com/aio/DU1NzRGNsWFZObldR?p=koHAsOiXTwASzfUV4gRRyX)里。
+请于 08 月 01 日前，在[官方论坛](https://bbs.robomaster.com/)下载，或直接通过[云端存储](https://fish.tiger3018.top/webdav/Public/Robomaster-Public/论坛和群聊文件)和 Fusion 团队内的图纸，分析不同英雄/步兵的**云台**优缺点，并体现在[作业在线文档](https://docs.qq.com/aio/DU1NzRGNsWFZObldR?p=koHAsOiXTwASzfUV4gRRyX)里。
 
 ### 04 传动结构
 
