structure: rename folder to english words, add symbolics.

--- a/docs/external/课程实用链接.md
+++ b/docs/external/课程实用链接.md
@@ -73,7 +73,7 @@ title: 课程实用链接
 
 * {bdg-primary}`B.3` Git
 
-  参见[标准规范](/分组专题/嵌软算法组/标准规范.md)。
+  参见[标准规范](/groups/ce/标准规范)。
 
   相关进阶链接：<https://learngitbranching.js.org/>
 
@@ -87,7 +87,7 @@ title: 课程实用链接
 
   相关视频：直接搜索 B 站。
 
-  {bdg-danger}`提请注意` 该教程文档和示例代码中有一些省略的环节，或是未修订的内容，已整理于[嵌入式代码札记](/分组专题/嵌软算法组/嵌入式代码札记.md)。
+  {bdg-danger}`提请注意` 该教程文档和示例代码中有一些省略的环节，或是未修订的内容，已整理于[嵌入式代码札记](/groups/ce/嵌入式代码札记)。
 
 * 通过阅读用户手册了解开发板的使用，如有必要可结合原理图、位号图确认接口位置、具体功能。
 
