--- a/docs/generic/basic/参与贡献.md
+++ b/docs/generic/basic/参与贡献.md
@@ -42,7 +42,7 @@ title: 参与贡献
 
    将显示为
 
-   [那啥，提问的智慧啊！](/名词解释/提问的智慧.md)[而且还是提问的智慧啊！](../%E5%90%8D%E8%AF%8D%E8%A7%A3%E9%87%8A/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7.md)
+   <!--[那啥，提问的智慧啊！](/名词解释/提问的智慧.md)[而且还是提问的智慧啊！](../%E5%90%8D%E8%AF%8D%E8%A7%A3%E9%87%8A/%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7.md)-->
 
 3. Dropdown (powered by sphinx_design)
 
