--- a/docs/generic/explain/提问的智慧.md
+++ b/docs/generic/explain/提问的智慧.md
@@ -9,7 +9,7 @@ title: 提问的智慧（精简版）
 
 ## 请你做到
 
-1. 完成了 [RTFM](/外部资料/index) (Read The Fucking Manual) 和 STFW (Search The Fucking Web) 两个步骤。
+1. 完成了 [RTFM](/external/课程实用链接) (Read The Fucking Manual) 和 STFW (Search The Fucking Web) 两个步骤。
   
    通常，用这两句之一回答你的人会给你一份包含你需要内容的手册或者一个网址，而且他们打这些字的时候也正在读着。这些答复意味着回答者认为
   
