--- a/docs/groups/ce/嵌入式代码札记.md
+++ b/docs/groups/ce/嵌入式代码札记.md
@@ -10,14 +10,18 @@ title: 嵌入式代码札记
 
 1. CubeMX 的引脚复用问题。
 
-:::{note} TODO
+:::note 
+TODO
 :::
 
 ### 具体代码用例
+
+* [测试](/groups/ee/补充知识)
 
 ## 底盘控制实现
 
 基于梯队课程扩充。
 
-:::{note} TODO
+:::note
+TODO
 :::
